--- a/lib/screens/CMakeLists.txt
+++ b/lib/screens/CMakeLists.txt
@@ -5,8 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
 find_package(Curses REQUIRED)
-find_package(Threads REQUIRED)
 
-link_libraries(${CURSES_LIBRARIES} Threads::Threads)
+link_libraries(${CURSES_LIBRARIES})
 
 add_library(ncurses_screen ncurses_screen.c)
