Begin to use gtk

--- a/lib/screens/CMakeLists.txt
+++ b/lib/screens/CMakeLists.txt
@@ -5,7 +5,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
 find_package(Curses REQUIRED)
-
-link_libraries(${CURSES_LIBRARIES})
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK4 REQUIRED gtk4)
 
 add_library(ncurses_screen ncurses_screen.c)
+target_link_libraries(ncurses_screen ${CURSES_LIBRARIES})
+
+include_directories(${GTK4_INCLUDE_DIRS})
+add_library(gtk_screen gtk_screen.c)
+target_link_libraries(gtk_screen ${GTK4_LIBRARIES})
