--- a/lib/screens/CMakeLists.txt
+++ b/lib/screens/CMakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
 find_package(Curses REQUIRED)
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(GTK4 REQUIRED gtk4)
+find_package(Threads REQUIRED)
+find_package(raylib 3.0 REQUIRED)
 
 add_library(ncurses_screen ncurses_screen.c)
 target_link_libraries(ncurses_screen ${CURSES_LIBRARIES})
 
-include_directories(${GTK4_INCLUDE_DIRS})
-add_library(gtk_screen gtk_screen.c)
-target_link_libraries(gtk_screen ${GTK4_LIBRARIES})
+add_library(gui_screen gui_screen.c)
+target_link_libraries(gui_screen raylib)
